--- a/djangoproject.jp/community/index.html
+++ b/djangoproject.jp/community/index.html
@@ -191,7 +191,7 @@ Community
 <h3><a href="http://eiry.bitbucket.io/" target="_blank">DjangoによるWebアプリケーション開発入門</a></h3>
 <p>「Pythonは書けるようになったから、次にWebアプリケーションを作ってみたい。」と言う人が、Djangoの機能に触れるためのチュートリアルです。</p>
 <p>「Django基礎編」「ゲストボードを作ろう」が終わったらDjangoドキュメントにあるチュートリアルを実施してみると良いでしょう。</p>
-<p><a href="http://eiry.bitbucket.io/" target="_blank">http://eiry.bitbucket.org/</a></p>
+<p><a href="http://eiry.bitbucket.io/" target="_blank">http://eiry.bitbucket.io/</a></p>
 <hr>
 <h2><a href="https://code.djangoproject.com/wiki/NewbieMistakes" target="_blank">NewbieMistakes</a></h2>
 <p>Djangoに慣れない人が犯しがちな間違い集です。</p>
