--- a/djangoproject.jp/index.html
+++ b/djangoproject.jp/index.html
@@ -127,6 +127,17 @@
 
 <div class="col-md-none ">
 
+	<div class="container">
+		<div class="row">
+			<div class="col-lg-12">
+				<div class="big-cta">
+					<div class="cta-text" style="background-color: #f1f5ff; border: solid 2px #a5acfe; padding: 8px;">
+						<span>NEWS: <a href="https://djangocongress.jp/">DjangoCongress JP 2018が5月19日、5月20日に開催されます。</span>
+					</div>
+				</div>
+			</div>
+		</div>
+	</div>
 
 
 <!-- start slider -->
