--- a/djangoproject.jp/weblog/_pages/5/index.html
+++ b/djangoproject.jp/weblog/_pages/5/index.html
@@ -442,43 +442,43 @@
     <span>Page 5 of 8</span>
 </li>
 <li class="prev previous">
-    <a href="?page=4">&larr;</a>
+    <a href="/weblog/_pages/4">&larr;</a>
 </li>
 
 <li>
-    <a href="?page=1">1</a>
+    <a href="/weblog/_pages/1">1</a>
 </li>
 
 <li>
-    <a href="?page=2">2</a>
+    <a href="/weblog/_pages/2">2</a>
 </li>
 
 <li>
-    <a href="?page=3">3</a>
+    <a href="/weblog/_pages/3">3</a>
 </li>
 
 <li>
-    <a href="?page=4">4</a>
+    <a href="/weblog/_pages/4">4</a>
 </li>
 
 <li class="active">
-    <a href="?page=5">5</a>
+    <a href="/weblog/_pages/5">5</a>
 </li>
 
 <li>
-    <a href="?page=6">6</a>
+    <a href="/weblog/_pages/6">6</a>
 </li>
 
 <li>
-    <a href="?page=7">7</a>
+    <a href="/weblog/_pages/7">7</a>
 </li>
 
 <li>
-    <a href="?page=8">8</a>
+    <a href="/weblog/_pages/8">8</a>
 </li>
 
 <li class="next">
-    <a href="?page=6">&rarr;</a>
+    <a href="/weblog/_pages/6">&rarr;</a>
 </li>
 
 </ul>
