--- a/djangoproject.jp/translate/index.html
+++ b/djangoproject.jp/translate/index.html
@@ -6,7 +6,7 @@
 <meta http-equiv="Content-type" content="text/html; charset=utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <meta name="keywords" content="" />
-<meta name="description" content="最新ドキュメント翻訳現在ドキュメントを国際化するプロジェクトがDjango本体で進行しており､ 最新版(1.11)ドキュメントをTransifexで翻訳中です｡" />
+<meta name="description" content="最新ドキュメント翻訳現在ドキュメントを国際化するプロジェクトがDjango本体で進行しており､ 最新版(3.0)ドキュメントをTransifexで翻訳中です｡" />
 <title>documentation / 翻訳への参加方法 | djangoproject.jp</title>
 <link rel="shortcut icon" href="/static/img/favicon.ico">
 
@@ -171,7 +171,7 @@
 
 
 <h2>最新ドキュメント翻訳</h2>
-<p>現在ドキュメントを国際化するプロジェクトがDjango本体で進行しており､ 最新版(1.11)ドキュメントをTransifexで翻訳中です｡</p>
+<p>現在ドキュメントを国際化するプロジェクトがDjango本体で進行しており､ 最新版(3.0)ドキュメントをTransifexで翻訳中です｡</p>
 <p> </p>
 <ul>
 <li><a href="/howtojoin-transifex/">ユーザー登録と参加方法</a>を読んでユーザーを登録します。</li>
@@ -183,12 +183,12 @@
 <p>訳文の提出者が明らかなときは、断りのない限り、貢献者としてお名前やidを明記することがあります。</p>
 <h2>翻訳されたリソース一覧</h2>
 <ul>
-<li><a href="https://docs.djangoproject.com/ja/2.2/" target="_blank">2.2 ドキュメント</a></li>
-<li><a href="https://docs.djangoproject.com/ja/1.11/" target="_blank">1.11ドキュメント</a></li>
-<li><a href="http://docs.djangoproject.jp/" target="_blank">1.4ドキュメント</a></li>
-<li><a href="/doc/ja/1.0/" target="_blank">1.0ドキュメント</a></li>
+<li><a href="https://docs.djangoproject.com/ja/" target="_blank">Django最新版のドキュメント</a></li>
+<li><a href="https://docs.djangoproject.com/ja/3.0/" target="_blank">3.0</a>, <a href="https://docs.djangoproject.com/ja/2.2/" target="_blank">2.2</a>, <a href="https://docs.djangoproject.com/ja/2.1/" target="_blank">2.1</a>, <a href="https://docs.djangoproject.com/ja/3.0/" target="_blank">2.0</a>, <a href="https://docs.djangoproject.com/ja/1.11/" target="_blank">1.11</a>, <a href="https://docs.djangoproject.com/ja/1.10/" target="_blank">1.10</a>, <a href="https://docs.djangoproject.com/ja/1.9/" target="_blank">1.9</a></li>
+<li>1.4ドキュメント (公開終了)</li>
+<li><a href="/doc/ja/1.0/" target="_blank">1.0ドキュメント (Django本体のサポート終了)</a></li>
 </ul>
-<p>1.11ドキュメント以降は本家 djangoproject.com より配信されています。</p>
+<p>1.9ドキュメント以降は本家 djangoproject.com より配信されています。</p>
 <h2>旧ドキュメントの翻訳方法</h2>
 <ul>
 <li><a href="/translate_old/">1.4ドキュメントの翻訳方法</a></li>
@@ -231,7 +231,6 @@
             id="footer-menu-https:--docs.djangoproject.com-ja-"><a href="https://docs.djangoproject.com/ja/">documentation</a></li><li 
             id="footer-menu-https:--docs.djangoproject.com-ja-2.2-"><a href="https://docs.djangoproject.com/ja/2.2/">2.2 ドキュメント</a></li><li 
             id="footer-menu-https:--docs.djangoproject.com-ja-1.11-"><a href="https://docs.djangoproject.com/ja/1.11/">1.11ドキュメント</a></li><li 
-            id="footer-menu-http:--docs.djangoproject.jp-"><a href="http://docs.djangoproject.jp/">1.4ドキュメント</a></li><li 
             id="footer-menu--doc-ja-1.0-"><a href="/doc/ja/1.0/">1.0ドキュメント</a></li><li class="active"
             id="footer-menu-translate"><a href="/translate/">翻訳への参加方法</a></li></ul><ul class="list-unstyled"><li 
             id="footer-menu-community"><a href="/community/">Community</a></li><li 
