Use copyright and license adapted from Django project
Signed-off-by: Takuya Noguchi <takninnovationresearch@gmail.com>

--- a/djangoproject.jp/translate/index.html
+++ b/djangoproject.jp/translate/index.html
@@ -177,10 +177,12 @@
 <li><a href="/howtojoin-transifex/">ユーザー登録と参加方法</a>を読んでユーザーを登録します。</li>
 <li><a href="/howtotranslate/">Transifexでの翻訳の進め方</a>を読んで翻訳を進めます</li>
 </ul>
+
 <h2>著作権について</h2>
-<p>成果物の品質を保ち、より多くの人の手に届けるために、著作物を変更したり、公開したりする上で、スムーズに許諾を得られるようにしたいと思います。</p>
-<p>みなさんから寄せられ、リポジトリにチェックインされた内容は、Django プロジェクト の採用する BSD ライセンスに準じて、変更・配布・公開されます。Ownersは、相互に同意の上で、有償のサービスや書籍として、成果物を公開することがあります。</p>
-<p>訳文の提出者が明らかなときは、断りのない限り、貢献者としてお名前やidを明記することがあります。</p>
+
+<p><a href="https://www.djangoproject.com/foundation/cla/">Contributor License Agreements</a> (CLA) に記載されている通り、 Django Software Foundation and individual contributors という権利者名で Django 本体同様に修正BSDライセンス(3条項)でライセンスされます。</p>
+<p>上記Django CLAにサインできない場合は、貢献された翻訳内容が遡って削除される可能性がありますので、翻訳作業開始前に上記CLAに対してサインすることをお勧めします。</p>
+
 <h2>翻訳されたリソース一覧</h2>
 <ul>
 <li><a href="https://docs.djangoproject.com/ja/" target="_blank">Django最新版のドキュメント</a></li>
