--- a/djangoproject.jp/translate_old/index.html
+++ b/djangoproject.jp/translate_old/index.html
@@ -216,6 +216,11 @@ git diff 007bfddc1fc4977009e431cf9706408316b682af f95baa1d8a8a96f843745118c38b7d
 </pre>
 <p>すれば _build ディレクトリ以下にビルドされます。</p>
 
+<h2>著作権について</h2>
+
+<p>成果物の品質を保ち、より多くの人の手に届けるために、著作物を変更したり、公開したりする上で、スムーズに許諾を得られるようにしたいと思います。</p>
+<p>みなさんから寄せられ、リポジトリにチェックインされた内容は、Django プロジェクト の採用する BSD ライセンスに準じて、変更・配布・公開されます。Ownersは、相互に同意の上で、有償のサービスや書籍として、成果物を公開することがあります。</p>
+<p>訳文の提出者が明らかなときは、断りのない限り、貢献者としてお名前やidを明記することがあります。</p>
 
 
 </div>
