--- a/djangoproject.jp/howtotranslate/index.html
+++ b/djangoproject.jp/howtotranslate/index.html
@@ -94,8 +94,6 @@
         >
             documentation
             <b class="caret"></b></a><ul class="dropdown-menu"><li class="" id="https:--docs.djangoproject.com-ja"><a href="https://docs.djangoproject.com/ja/">日本語ドキュメント</a></li><li class="
-               "
-        id="-doc-ja-1.0-"><a href="/doc/ja/1.0/">1.0ドキュメント</a></li><li class="
                active"
         id="translate"><a href="/translate/">翻訳への参加方法</a></li></ul></li><li class="dropdown
                "
@@ -247,8 +245,7 @@ TransifexでのDjangoドキュメント翻訳の進め方
             id="footer-menu-whouses"><a href="/whouses/">利用実績</a></li></ul><ul class="list-unstyled"><li class="active"
             id="footer-menu-https:--docs.djangoproject.com-ja-"><a href="https://docs.djangoproject.com/ja/">documentation</a></li><li 
             id="footer-menu-https:--docs.djangoproject.com-ja-2.2-"><a href="https://docs.djangoproject.com/ja/2.2/">2.2 ドキュメント</a></li><li 
-            id="footer-menu-https:--docs.djangoproject.com-ja-1.11-"><a href="https://docs.djangoproject.com/ja/1.11/">1.11ドキュメント</a></li><li 
-            id="footer-menu--doc-ja-1.0-"><a href="/doc/ja/1.0/">1.0ドキュメント</a></li><li class="active"
+            id="footer-menu-https:--docs.djangoproject.com-ja-1.11-"><a href="https://docs.djangoproject.com/ja/1.11/">1.11ドキュメント</a></li><li class="active"
             id="footer-menu-translate"><a href="/translate/">翻訳への参加方法</a></li></ul><ul class="list-unstyled"><li 
             id="footer-menu-community"><a href="/community/">Community</a></li><li 
             id="footer-menu-events"><a href="/events/">Events</a></li></ul><ul class="list-unstyled"><li 
