--- a/djangoproject.jp/translate_old/index.html
+++ b/djangoproject.jp/translate_old/index.html
@@ -268,7 +268,7 @@ git diff 007bfddc1fc4977009e431cf9706408316b682af f95baa1d8a8a96f843745118c38b7d
 						<p>
 						</p>
 	          <p>
-             <a href="http://www.djangoproject.com/">Django</a> and the Django logo are registered trademarks of <a href="http://www.ljworld.com/">Lawrence Journal-World</a>.
+             Django is a <a href="https://www.djangoproject.com/trademarks/">registered trademark</a> of the Django Software Foundation.
 	          </p>
 					</div>
 
