--- a/djangoproject.jp/weblog/django162-17a2/index.html
+++ b/djangoproject.jp/weblog/django162-17a2/index.html
@@ -660,7 +660,7 @@ $(function() {
 						<p>
 						</p>
 	          <p>
-             <a href="http://www.djangoproject.com/">Django</a> and the Django logo are registered trademarks of <a href="http://www.ljworld.com/">Lawrence Journal-World</a>.
+             Django is a <a href="https://www.djangoproject.com/trademarks/">registered trademark</a> of the Django Software Foundation.
 	          </p>
 					</div>
 
