--- a/djangoproject.jp/howtotranslate/index.html
+++ b/djangoproject.jp/howtotranslate/index.html
@@ -173,12 +173,12 @@ TransifexでのDjangoドキュメント翻訳の進め方
 <h2>翻訳したいリソースを開く</h2>
 <p><a href="https://www.transifex.com/projects/p/django-docs/">Transifexのプロジェクト</a>を開きます。</p>
 <p></p>
-<p><img height="499" src="/static/media/uploads/.thumbnails/ss_tr_1.png/ss_tr_1-800x499.png" width="800"/></p>
+<p><img height="499" src="/static/media/uploads/_thumbnails/ss_tr_1.png/ss_tr_1-800x499.png" width="800"/></p>
 <p></p>
 <p><strong>django-docs</strong>プロジェクトの画面から翻訳したい言語 <strong>Japanese</strong> を選択します。</p>
 <p>以下のように翻訳対象のリソース一覧画面が開きます。</p>
 <p></p>
-<p><img height="486" src="/static/media/uploads/.thumbnails/ss_tr_2.png/ss_tr_2-700x486.png" width="700"/></p>
+<p><img height="486" src="/static/media/uploads/_thumbnails/ss_tr_2.png/ss_tr_2-700x486.png" width="700"/></p>
 <p></p>
 <p>ここから翻訳したいリソースを選び、クリックします。それぞれはDjangoのドキュメントを大まかに分割したもので、例えば以下のようなページと対応しています。</p>
 <ul>
@@ -189,7 +189,7 @@ TransifexでのDjangoドキュメント翻訳の進め方
 <p>クリックするとポップアップが開くので<strong>Translate</strong>をクリックしてください。</p>
 <p>クリックできない場合、ユーザーが作成されていないか翻訳チームに参加できていません。参加リクエストを送信済みであれば、管理者に招待されるまでお待ちください。</p>
 <p></p>
-<p><img height="428" src="/static/media/uploads/.thumbnails/ss_tr_3.png/ss_tr_3-656x428.png" width="656"/></p>
+<p><img height="428" src="/static/media/uploads/_thumbnails/ss_tr_3.png/ss_tr_3-656x428.png" width="656"/></p>
 <p></p>
 <h2>翻訳の進め方</h2>
 <p>翻訳するリソースを決定すると、Transifexの翻訳画面が開きます。</p>
@@ -197,12 +197,12 @@ TransifexでのDjangoドキュメント翻訳の進め方
 <li>左側に翻訳対象の文と、翻訳語の文が一覧表示されます</li>
 <li>右側に翻訳文の入力欄が開きます</li>
 </ul>
-<p><img height="314" src="/static/media/uploads/.thumbnails/ss_tr_4.png/ss_tr_4-700x314.png" width="700"/></p>
+<p><img height="314" src="/static/media/uploads/_thumbnails/ss_tr_4.png/ss_tr_4-700x314.png" width="700"/></p>
 <p></p>
 <p>一覧から翻訳文の無い英文をクリックで選択し、翻訳文を入力します。</p>
 <p>入力できれば<strong> Save </strong>をクリックして保存できます。</p>
 <p></p>
-<p><img height="495" src="/static/media/uploads/.thumbnails/ss_tr_5.png/ss_tr_5-700x495.png" width="700"/></p>
+<p><img height="495" src="/static/media/uploads/_thumbnails/ss_tr_5.png/ss_tr_5-700x495.png" width="700"/></p>
 <p></p>
 <p>翻訳の流れは以上です。Transifexには他にも機械翻訳連携や用語集への単語追加などができますが、ここでは紹介しません。</p>
 <h2><br>翻訳後のドキュメントはどこで見れるの?</br></h2>
