Improve contributor experience with docs modifications
Signed-off-by: Takuya Noguchi <takninnovationresearch@gmail.com>

--- a/djangoproject.jp/howtotranslate/index.html
+++ b/djangoproject.jp/howtotranslate/index.html
@@ -171,7 +171,7 @@ TransifexでのDjangoドキュメント翻訳の進め方
 <h2>ログインする</h2>
 <p>事前に<a href="/howtojoin-transifex/">アカウント作成、チームへの参加</a>をし、作成したアカウントでログインしてください。</p>
 <h2>翻訳したいリソースを開く</h2>
-<p><a href="https://www.transifex.com/projects/p/django-docs/">Transifexのプロジェクト</a>を開きます。</p>
+<p><a href="https://www.transifex.com/django/django-docs/dashboard/">Transifexのdjango/django-docsプロジェクト</a>を開きます。</p>
 <p></p>
 <p><img height="499" src="/static/media/uploads/_thumbnails/ss_tr_1.png/ss_tr_1-800x499.png" width="800"/></p>
 <p></p>
@@ -182,9 +182,9 @@ TransifexでのDjangoドキュメント翻訳の進め方
 <p></p>
 <p>ここから翻訳したいリソースを選び、クリックします。それぞれはDjangoのドキュメントを大まかに分割したもので、例えば以下のようなページと対応しています。</p>
 <ul>
-<li>intro: チュートリアルなどの入門向けの内容 <a href="https://docs.djangoproject.com/en/1.8/intro/">https://docs.djangoproject.com/en/1.8/intro/</a></li>
-<li>topics: 各機能の大まかな紹介、使い方 <a href="https://docs.djangoproject.com/en/1.8/topics/">https://docs.djangoproject.com/en/1.8/topics/</a></li>
-<li>reference: APIリファレンス <a href="https://docs.djangoproject.com/en/1.8/ref/">https://docs.djangoproject.com/en/1.8/ref/</a></li>
+<li>intro: チュートリアルなどの入門向けの内容 <a href="https://docs.djangoproject.com/en/3.0/intro/">https://docs.djangoproject.com/en/3.0/intro/</a></li>
+<li>topics: 各機能の大まかな紹介、使い方 <a href="https://docs.djangoproject.com/en/3.0/topics/">https://docs.djangoproject.com/en/3.0/topics/</a></li>
+<li>reference: APIリファレンス <a href="https://docs.djangoproject.com/en/3.0/ref/">https://docs.djangoproject.com/en/3.0/ref/</a></li>
 </ul>
 <p>クリックするとポップアップが開くので<strong>Translate</strong>をクリックしてください。</p>
 <p>クリックできない場合、ユーザーが作成されていないか翻訳チームに参加できていません。参加リクエストを送信済みであれば、管理者に招待されるまでお待ちください。</p>
@@ -207,7 +207,7 @@ TransifexでのDjangoドキュメント翻訳の進め方
 <p>翻訳の流れは以上です。Transifexには他にも機械翻訳連携や用語集への単語追加などができますが、ここでは紹介しません。</p>
 <h2><br>翻訳後のドキュメントはどこで見れるの?</br></h2>
 <p>現状、Transifex上で進めている最新ドキュメントの翻訳は <a href="https://docs.djangoproject.com/ja/" target="_blank">https://docs.djangoproject.com/ja/</a> で公開されています。</p>
-<p>翻訳はすぐにではないですが、随時反映されます。</p>
+<p>翻訳は随時反映されます。反映状況は<a href="https://github.com/django/django-docs-translations/commits/stable/3.0.x/translations/ja/LC_MESSAGES">django / django-docs-translations (stable/3.0.xブランチ)</a>のコミットログで確認できます。</p>
 
 
 
