--- a/djangoproject.jp/translate/index.html
+++ b/djangoproject.jp/translate/index.html
@@ -184,8 +184,8 @@
 <h2>翻訳されたリソース一覧</h2>
 <ul>
 <li><a href="https://docs.djangoproject.com/ja/" target="_blank">Django最新版のドキュメント</a></li>
-<li><a href="https://docs.djangoproject.com/ja/3.0/" target="_blank">3.0</a>, <a href="https://docs.djangoproject.com/ja/2.2/" target="_blank">2.2</a>, <a href="https://docs.djangoproject.com/ja/2.1/" target="_blank">2.1</a>, <a href="https://docs.djangoproject.com/ja/3.0/" target="_blank">2.0</a>, <a href="https://docs.djangoproject.com/ja/1.11/" target="_blank">1.11</a>, <a href="https://docs.djangoproject.com/ja/1.10/" target="_blank">1.10</a>, <a href="https://docs.djangoproject.com/ja/1.9/" target="_blank">1.9</a></li>
-<li>1.4ドキュメント (公開終了)</li>
+<li><a href="https://docs.djangoproject.com/ja/3.0/" target="_blank">3.0</a>, <a href="https://docs.djangoproject.com/ja/2.2/" target="_blank">2.2</a>, <a href="https://docs.djangoproject.com/ja/2.1/" target="_blank">2.1</a>, <a href="https://docs.djangoproject.com/ja/2.0/" target="_blank">2.0</a>, <a href="https://docs.djangoproject.com/ja/1.11/" target="_blank">1.11</a>, <a href="https://docs.djangoproject.com/ja/1.10/" target="_blank">1.10</a></li>
+<li>1.9, 1.4 (公開終了)</li>
 <li><a href="/doc/ja/1.0/" target="_blank">1.0ドキュメント (Django本体のサポート終了)</a></li>
 </ul>
 <p>1.9ドキュメント以降は本家 djangoproject.com より配信されています。</p>
