--- a/djangoproject.jp/translate/index.html
+++ b/djangoproject.jp/translate/index.html
@@ -6,7 +6,7 @@
 <meta http-equiv="Content-type" content="text/html; charset=utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <meta name="keywords" content="" />
-<meta name="description" content="最新ドキュメント翻訳現在ドキュメントを国際化するプロジェクトがDjango本体で進行しており､ 最新版(3.0)ドキュメントをTransifexで翻訳中です｡" />
+<meta name="description" content="最新ドキュメント翻訳現在ドキュメントを国際化するプロジェクトがDjango本体で進行しており､ 最新版(3.1)ドキュメントをTransifexで翻訳中です｡" />
 <title>documentation / 翻訳への参加方法 | djangoproject.jp</title>
 <link rel="shortcut icon" href="/static/img/favicon.ico">
 
@@ -169,7 +169,7 @@
 
 
 <h2>最新ドキュメント翻訳</h2>
-<p>現在ドキュメントを国際化するプロジェクトがDjango本体で進行しており､ 最新版(3.0)ドキュメントをTransifexで翻訳中です｡</p>
+<p>現在ドキュメントを国際化するプロジェクトがDjango本体で進行しており､ 最新版(3.1)ドキュメントをTransifexで翻訳中です｡</p>
 <p> </p>
 <ul>
 <li><a href="/howtojoin-transifex/">ユーザー登録と参加方法</a>を読んでユーザーを登録します。</li>
@@ -184,9 +184,9 @@
 <h2>翻訳されたリソース一覧</h2>
 <ul>
 <li><a href="https://docs.djangoproject.com/ja/" target="_blank">Django最新版のドキュメント</a></li>
-<li><a href="https://docs.djangoproject.com/ja/3.0/" target="_blank">3.0</a>, <a href="https://docs.djangoproject.com/ja/2.2/" target="_blank">2.2</a>, <a href="https://docs.djangoproject.com/ja/2.1/" target="_blank">2.1</a>, <a href="https://docs.djangoproject.com/ja/2.0/" target="_blank">2.0</a>, <a href="https://docs.djangoproject.com/ja/1.11/" target="_blank">1.11</a>, <a href="https://docs.djangoproject.com/ja/1.10/" target="_blank">1.10</a></li>
-<li>1.9, 1.4 (公開終了)</li>
-<li><a href="/doc/ja/1.0/" target="_blank">1.0ドキュメント (Django本体のサポート終了)</a></li>
+<li>サポート中: <a href="https://docs.djangoproject.com/ja/3.1/" target="_blank">3.1</a>, <a href="https://docs.djangoproject.com/ja/3.0/" target="_blank">3.0</a>, <a href="https://docs.djangoproject.com/ja/2.2/" target="_blank">2.2</a></li>
+<li>サポート終了: <a href="https://docs.djangoproject.com/ja/2.1/" target="_blank">2.1</a>, <a href="https://docs.djangoproject.com/ja/2.0/" target="_blank">2.0</a>, <a href="https://docs.djangoproject.com/ja/1.11/" target="_blank">1.11</a>, <a href="https://docs.djangoproject.com/ja/1.10/" target="_blank">1.10</a>, <a href="/doc/ja/1.0/" target="_blank">1.0</a></li>
+<li>公開終了: 1.9, 1.4</li>
 </ul>
 <p>1.9ドキュメント以降は本家 djangoproject.com より配信されています。</p>
 <h2>旧ドキュメントの翻訳方法</h2>
