Always-on SSL using https protocol
Signed-off-by: Takuya Noguchi <takninnovationresearch@gmail.com>

--- a/djangoproject.jp/translate_old/index.html
+++ b/djangoproject.jp/translate_old/index.html
@@ -169,7 +169,7 @@
 
 
 <h2>1.4ドキュメント翻訳</h2>
-<p><a href="http://docs.djangoproject.jp/">1.4ドキュメント</a>の翻訳はGithub上での作業になります。</p>
+<p>1.4ドキュメント (2018年2月 公開終了) の翻訳はGithub上での作業になります。</p>
 <p>以下の手順で、<a href="https://github.com/django/django/">本家リポジトリ</a> revision 007bfddc1fc4977009e431cf9706408316b682af から revision f95baa1d8a8a96f843745118c38b7d13824a1e38 への差分訳を行なってください。</p>
 <ol class="arabic">
 <li>
