Discordへのリンク追加とDjangoCongress JPのリンク追加

--- a/djangoproject.jp/community/index.html
+++ b/djangoproject.jp/community/index.html
@@ -170,8 +170,9 @@ Community
 
 <p>このページではコミュニティで公開されている役立つ資料へのリンクなどを集めています。</p>
 <h2>助けが必要ですか?</h2>
-<p>解決できない問題、知りたいことがあればメーリングリストなどで質問してみましょう。</p>
+<p>解決できない問題、知りたいことがあればDiscordやメーリングリストなどで質問してみましょう。</p>
 <ul>
+<li><a href="https://discord.gg/RZvawz6KgC">Discordサーバー</a></li>
 <li><a href="https://groups.google.com/forum/#!forum/django-ja" target="_blank">django-ja メーリングリスト</a></li>
 <li><a href="https://twitter.com/django_ja/" target="_blank">Twitterアカウント</a></li>
 <li><a href="/events/">開催イベント</a></li>
