--- a/djangoproject.jp/index.html
+++ b/djangoproject.jp/index.html
@@ -141,9 +141,9 @@
                 </div>
               </li>
               <li>
-                <img src="/static/img/slides/tdm.jpg" alt="" />
+                <img src="/static/img/slides/congress.jpg" alt="" />
                 <div class="flex-caption">
-                    <h3>Tokyo Django Meetup</h3>
+                    <h3>DjangoCongress JP</h3>
 					<p>Djangoのユーザーに会いに行く</p>
 					<a href="/events/" class="btn btn-theme">Learn More</a>
                 </div>
