--- a/djangoproject.jp/events/index.html
+++ b/djangoproject.jp/events/index.html
@@ -172,19 +172,12 @@ Events
 <ul>
 <li><a href="https://django.connpass.com/">djangoja - connpass</a></li>
 </ul>
-<h1>TokyoDjangoMeetup</h1>
-<p>月に一度のペースで開催されるDjangoのMeetupです。</p>
-<p>開発したい課題、相談したいことを各自持ち寄り、好きに進めます。 運営側では課題や講義を用意しません。</p>
-<p>すごし方の例:</p>
-<ul>
-<li>Djangoを使ったWebアプリの開発</li>
-<li>Django用のライブラリ開発</li>
-<li>Django自体への貢献</li>
-<li>ブログ / 書籍の執筆</li>
-<li>Djangoのドキュメント翻訳</li>
-<li>雑談や相談、質問など</li>
-</ul>
-<p>参加は無料ですので、お気軽にどうぞ。</p>
+<h1>DjangoCongress JP</h1>
+<p>年に1回開催されるDjangoのカンファレンスです！</p>
+<p>ぜひ一年に一回のお祭りに参加してくれると嬉しいです。</p>
+<p>
+  <a href="https://djangocongress.jp/">DjangoCongress JP</a>
+</p>
 
 
 
