Refactor: page_type -> html_id

--- a/miya/contents/community/index.html
+++ b/miya/contents/community/index.html
@@ -1,5 +1,5 @@
 ---
-page_type: community
+html_id: community
 title: Community
 cta_text: Community
 meta_description: このページではコミュニティで公開されている役立つ資料へのリンクなどを集めています。
