--- a/miya/contents/events/index.html
+++ b/miya/contents/events/index.html
@@ -1,5 +1,5 @@
 ---
-page_type: events
+html_id: events
 title: Community / Events
 cta_text: Events
 meta_description: 開催されるイベントについては、connpassのグループでまとめています。
