--- a/miya/contents/howtojoin-transifex/index.html
+++ b/miya/contents/howtojoin-transifex/index.html
@@ -1,5 +1,5 @@
 ---
-page_type: howtojoin-transifex
+html_id: howtojoin-transifex
 title: documentation / 翻訳への参加方法 / Transifexへのユーザー登録とDjangoドキュメント翻訳プロジェクトへの参加方法
 cta_text: Transifexへのユーザー登録とDjangoドキュメント翻訳プロジェクトへの参加方法
 meta_description: TransifexのDjangoドキュメント日本語翻訳チームに参加する方法です。 このページを参考にユーザー作成、参加リクエストすることでTransifex上でDjangoドキュメントの翻訳ができるようになります。
