--- a/miya/contents/howtotranslate/index.html
+++ b/miya/contents/howtotranslate/index.html
@@ -1,5 +1,5 @@
 ---
-page_type: howtotranslate
+html_id: howtotranslate
 title: documentation / 翻訳への参加方法 / TransifexでのDjangoドキュメント翻訳の進め方
 cta_text: TransifexでのDjangoドキュメント翻訳の進め方
 meta_description: Transifex上での最新のDjangoドキュメント日本語翻訳の方法を紹介します。
