--- a/miya/contents/translate/index.html
+++ b/miya/contents/translate/index.html
@@ -1,5 +1,5 @@
 ---
-page_type: translate
+html_id: translate
 title: documentation / 翻訳への参加方法
 cta_text: 翻訳への参加方法
 meta_description: 最新ドキュメント翻訳現在ドキュメントを国際化するプロジェクトがDjango本体で進行しており､ 最新版(3.1)ドキュメントをTransifexで翻訳中です｡
