--- a/miya/contents/translate_old/index.html
+++ b/miya/contents/translate_old/index.html
@@ -1,5 +1,5 @@
 ---
-page_type: translate_old
+html_id: translate_old
 title: documentation / 翻訳への参加方法 / 旧ドキュメント翻訳方法
 cta_text: 旧ドキュメント翻訳方法
 meta_description: 1.4ドキュメント翻訳1.4ドキュメントの翻訳はGithub上での作業になります。
