--- a/miya/contents/about/index.html
+++ b/miya/contents/about/index.html
@@ -1,5 +1,5 @@
 ---
-page_type: about
+html_id: about
 title: About
 cta_text: About
 meta_description: DjangoDjango は Python で書かれたオープンソースのWebフレームワーク。見通しのよい MVC 分離、洗練された O/R マッピング API、そして汎用性の高い強力なテンプレートエンジンを備え、高い柔軟性とパフォーマンスを同時に要求されるWebアプリケーション開発をサポートしま す。 オブジェクト管理インタフェースやユーザ認証、セッション、国際化といった Webフレームワークとしての基本はもちろん、汎用のビューロジックや配信フィード (RSS/Atom) の生成など、Webアプリケーション開発に共通するメカニズムを提供し、DRY (Don't Repeat Yourself) の法則に沿った開発を、より簡単に、より迅速に実現します。 さあ、いますぐ Django を体験しましょう。
