Open external link with a new tab (window)

--- a/miya/contents/events/index.html
+++ b/miya/contents/events/index.html
@@ -8,12 +8,12 @@ meta_description: 開催されるイベントについては、connpassのグル
 
 <p>開催されるイベントについては、connpassのグループでまとめています。</p>
 <ul>
-<li><a href="https://django.connpass.com/">djangoja - connpass</a></li>
+<li><a href="https://django.connpass.com/" target="_blank" rel="noopener">djangoja - connpass</a></li>
 </ul>
 <h1>DjangoCongress JP</h1>
 <p>年に1回開催されるDjangoのカンファレンスです！</p>
 <p>ぜひ一年に一回のお祭りに参加してくれると嬉しいです。</p>
 <p>
-  <a href="https://djangocongress.jp/">DjangoCongress JP</a>
+  <a href="https://djangocongress.jp/" target="_blank" rel="noopener">DjangoCongress JP</a>
 </p>
 
