--- a/miya/contents/translate_old/index.html
+++ b/miya/contents/translate_old/index.html
@@ -8,10 +8,10 @@ meta_description: 1.4ドキュメント翻訳1.4ドキュメントの翻訳はGi
 
 <h2>1.4ドキュメント翻訳</h2>
 <p>1.4ドキュメント (2018年2月 公開終了) の翻訳はGithub上での作業になります。</p>
-<p>以下の手順で、<a href="https://github.com/django/django/">本家リポジトリ</a> revision 007bfddc1fc4977009e431cf9706408316b682af から revision f95baa1d8a8a96f843745118c38b7d13824a1e38 への差分訳を行なってください。</p>
+<p>以下の手順で、<a href="https://github.com/django/django/" target="_blank" rel="noopener">本家リポジトリ</a> revision 007bfddc1fc4977009e431cf9706408316b682af から revision f95baa1d8a8a96f843745118c38b7d13824a1e38 への差分訳を行なってください。</p>
 <ol class="arabic">
 <li>
-<p><a href="https://github.com/django-docs-ja/django-docs-ja/issues">issue トラッカー</a>にアサインする。</p>
+<p><a href="https://github.com/django-docs-ja/django-docs-ja/issues" target="_blank" rel="noopener">issue トラッカー</a>にアサインする。</p>
 <p>issue トラッカーから自分自身にアサインしてください。</p>
 </li>
 <li>
@@ -33,7 +33,7 @@ git diff 007bfddc1fc4977009e431cf9706408316b682af f95baa1d8a8a96f843745118c38b7d
 <li>
 <p>diff.txt の内容に基づいて、和訳を修正する。</p>
 <p>新規に翻訳するセクションについては、もとの英訳をコメントアウトして残してください。参照:</p>
-<p><a href="https://groups.google.com/forum/?fromgroups=#%21topic/django-ja/yBAu2i6bN9Y">https://groups.google.com/forum/?fromgroups=#!topic/django-ja/yBAu2i6bN9Y</a></p>
+<p><a href="https://groups.google.com/forum/?fromgroups=#%21topic/django-ja/yBAu2i6bN9Y" target="_blank" rel="noopener">https://groups.google.com/forum/?fromgroups=#!topic/django-ja/yBAu2i6bN9Y</a></p>
 <p>注意: diff には、既存の他のドキュメントから、ほとんど変更なく移動してきたも のや、他のドキュメントにレイアウト変更されたものがあります。そのような diff を見つけたら、できるだけ、該当のドキュメントも編集するか、Issue にメモを残し てください。</p>
 </li>
 <li>
@@ -43,7 +43,7 @@ git diff 007bfddc1fc4977009e431cf9706408316b682af f95baa1d8a8a96f843745118c38b7d
 </ol>
 <h3>ルール</h3>
 <p>和訳では、75−80カラムで折り返してください。テキスト形式でも見栄えよくするためです。</p>
-<p>和訳ドキュメント中にコメントで原文を残してください。 <a href="http://sphinx-users.jp/cookbook/translation.html#id1">Sphinx クックブック</a> が参考になります。</p>
+<p>和訳ドキュメント中にコメントで原文を残してください。 <a href="http://sphinx-users.jp/cookbook/translation.html#id1" target="_blank" rel="noopener">Sphinx クックブック</a> が参考になります。</p>
 <p>原則、英数字の前後にスペースを入れます。これもテキストの見栄えのためです。</p>
 <p>専門用語に訳語を当てるときには、初出の箇所で、訳語（英語）のように書いてくださ い。固有名詞は大文字で始めます。一般名詞は、小文字ではじめます。 例：ディスパッチャー (dispacher)、 継承 (inheritance)</p>
 <h3>ビルド</h3>
