--- a/miya/contents/events/index.html
+++ b/miya/contents/events/index.html
@@ -16,4 +16,9 @@ meta_description: 開催されるイベントについては、connpassのグル
 <p>
   <a href="https://djangocongress.jp/" target="_blank" rel="noopener">DjangoCongress JP</a>
 </p>
-
+<h2>開催したもの</h2>
+<iframe width="560" height="315" src="https://www.youtube-nocookie.com/embed/videoseries?si=sOOyJvf2AiVnNrUK&amp;list=PLfNCXSj_QJrouPHHxU9gvJGcXNIwPkrHW" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+<iframe width="560" height="315" src="https://www.youtube-nocookie.com/embed/videoseries?si=7SB_VYzckE2uXyaS&amp;list=PLfNCXSj_QJrpHdfh94Peeto9vmDezyw91" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+<iframe width="560" height="315" src="https://www.youtube-nocookie.com/embed/videoseries?si=pGGtm3xBD_L6J1TX&amp;list=PLfNCXSj_QJrryb3zDpaOTqd83uqeolhZX" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+<iframe width="560" height="315" src="https://www.youtube-nocookie.com/embed/videoseries?si=xJvJYIxUEg5yzsqe&amp;list=PLfNCXSj_QJroBUSCButn5tMBlNbbcGwCY" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+<iframe width="560" height="315" src="https://www.youtube-nocookie.com/embed/videoseries?si=4LWmEdw0921eAKa4&amp;list=PLfNCXSj_QJrquQyL-bSBdOFyvInP3vxqX" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
